<resources>
    <string name="app_name">Cocktail Cabinet</string>
    <string name="app_version">Version 1.0.3</string>

    <string name="cocktail1">Mojito</string>
    <string name="cocktail2">Long Island Iced Tea</string>
    <string name="cocktail3">Hendrick\'s Smash</string>
    <string name="cocktail4">Blue Lagoon</string>
    <string name="cocktail5">Old Fashioned</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="wishlist_text">My Wishlist</string>

    <string name="action_about">About</string>
    <string name="action_help">Help</string>

    <string name="contact_dev">Contact Developer</string>
    <string name="wishlist_title">Your Wishlist</string>

    <string name="hint">Swipe Right to See your Wishlist</string>

    <string name="wishlist_add_message">Please Select Cocktail</string>
    <string name="wishlist_add_btn">Add Cocktail</string>
    <string name="wishlist_remove_btn">Remove Cocktail</string>



</resources>
